Finished Euler Maruyama

--- a/MasterThesis.ipynb
+++ b/MasterThesis.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9ejwWwk9h8VjlLBBeokfF",
+      "authorship_tag": "ABX9TyMIzTrMn/6H4vPdn5aPIdoI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -47,16 +47,19 @@
         "\n",
         "  # Constructor\n",
         "  def __init__(self, start_time: float, end_time: float, num_intervals: int, \\\n",
-        "               diffusion_dimension=1, num_noises=1, num_paths=10000, only_gaussian_noise=True):\n",
+        "               diffusion_dimension=1, num_gaussian_noises=1, num_paths=10000, \\\n",
+        "               only_gaussian_noise=True):\n",
         "    self.__start_time = start_time\n",
         "    self.__end_time = end_time\n",
         "    self.__num_intervals = num_intervals\n",
+        "    self.__num_gaussian_noises = num_gaussian_noises\n",
         "    self.__only_gaussian_noise = only_gaussian_noise\n",
         "    self.__num_paths = num_paths\n",
         "    self.__time_intervals = np.linspace(start_time,\n",
         "                                       end_time,\n",
         "                                       num=num_intervals+1)\n",
-        "    self.__paths = np.zeros(size=(num_paths, num_intervals+1, diffusion_dimension))\n",
+        "    self.__paths = np.zeros(shape=(num_paths, num_intervals+1, diffusion_dimension))\n",
+        "    self.__diffusion_dimension = diffusion_dimension\n",
         "\n",
         "  # Set and get private attributes\n",
         "  def set_start_time(self, start_time):\n",
@@ -72,7 +75,7 @@
         "    self.__time_intervals = time_intervals\n",
         "\n",
         "  def set_dimension(self, d):\n",
-        "    self.__dimension = d\n",
+        "    self.__diffusion_dimension = d\n",
         "\n",
         "  def set_num_paths(self, num_paths):\n",
         "    self.__num_paths = num_paths\n",
@@ -92,60 +95,53 @@
         "  def get_dimension(self):\n",
         "    return self.__dimension\n",
         "\n",
-        "  def getNumPaths(self):\n",
+        "  def get_num_paths(self):\n",
         "    return self.__num_paths\n",
         "\n",
-        "  def getPaths(self):\n",
+        "  def get_paths(self):\n",
         "    return self.__paths\n",
         "\n",
+        "  def get_num_gaussian_noise(self):\n",
+        "    return self.__num_gaussian_noises\n",
+        "\n",
+        "  def get_gaussian_noise(self):\n",
+        "    return self.__noise\n",
+        "\n",
         "  # Public methods\n",
-        "  def generate_paths(self, diffusion){\n",
-        "      for i in range(self.__num_paths){\n",
-        "          self.__paths[i] = self.__generate_path(diffusion, self.__noise[i])\n",
-        "      }\n",
-        "  }\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "  # ==== Private ==== #\n",
-        "\n",
-        "  # Private attributes\n",
-        "  __start_time = None\n",
-        "  __end_time = None\n",
-        "  __num_intervals = None\n",
-        "  __time_intervals = None\n",
-        "  __dimension = None\n",
-        "  __num_paths = None\n",
-        "  __num_noises = None\n",
-        "  __noise = None\n",
-        "  __paths = None\n",
-        "\n",
-        "  # Private methods\n",
-        "  def __update_noise(self):\n",
-        "    self.__noise = np.random.multivariate_normal(mean=np.zeros(self.__num_noises),\n",
-        "                                                 cov=np.eye(self.__num_noises),\n",
-        "                                                 size=(self.__num_paths, self.__time_intervals))\n",
+        "  def update_noise(self):\n",
+        "    self.__noise = np.random.multivariate_normal(mean=np.zeros(self.__num_gaussian_noises),\n",
+        "                                                 cov=np.eye(self.__num_gaussian_noises),\n",
+        "                                                 size=(self.__num_paths, self.__num_intervals))\n",
         "\n",
         "    for i in range(self.__num_intervals):\n",
         "      h = self.__time_intervals[i+1] - self.__time_intervals[i]\n",
         "      self.__noise[:,i,:] *= np.sqrt(h)\n",
         "\n",
+        "  def generate_paths(self, diffusion):\n",
+        "      for i in range(self.__num_paths):\n",
+        "          self.__paths[i] = self.__generate_path(diffusion, self.__noise[i])\n",
+        "\n",
+        "\n",
+        "\n",
+        "  # ==== Private ==== #\n",
+        "\n",
+        "  # Private methods\n",
+        "\n",
         "  # Generate a path of the diffusion\n",
         "  def __generate_path(self, diffusion, noise):\n",
-        "    ret = np.zeros(shape=(self.__num_intervals+1, self.__dimension))\n",
+        "    ret = np.zeros(shape=(self.__num_intervals+1, self.__diffusion_dimension))\n",
         "    # Set the starting point of the diffusion\n",
         "    x_0 = diffusion.get_starting_point()\n",
-        "    if x_0.size < self.__dimension:\n",
-        "      ret[0] = x_0 * np.ones(self.__dimension)\n",
+        "    if type(x_0) == int:\n",
+        "      ret[0] = x_0 * np.ones(self.__diffusion_dimension)\n",
         "    else:\n",
         "      ret[0] = x_0\n",
         "    # Simulate the following states\n",
-        "    for i in range(1, self._num_intervals+1):\n",
+        "    for i in range(1, self.__num_intervals+1):\n",
         "      h = self.__time_intervals[i] - self.__time_intervals[i-1]\n",
         "      delta_drift = diffusion.drift(self.__time_intervals[i-1], ret[i-1]) * h\n",
-        "      delta_diffusion = np.matmul(diffusion.diffusion(self.__time[i-1], ret[i-1]),\n",
-        "                                  noise[i])\n",
+        "      delta_diffusion = np.matmul(diffusion.diffusion(self.__time_intervals[i-1], ret[i-1]),\n",
+        "                                  noise[i-1])\n",
         "      ret[i] = ret[i-1] + delta_drift + delta_diffusion\n",
         "    return ret\n",
         "\n",
@@ -155,7 +151,7 @@
       "metadata": {
         "id": "NgliujGbrQzD"
       },
-      "execution_count": 11,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -166,57 +162,244 @@
         "  # ==== Public ==== #\n",
         "\n",
         "  # Constructor\n",
-        "  def __init__(self, drift_parameter, diffusion_parameter, starting_point):\n",
+        "  def __init__(self, drift_parameter, diffusion_parameter, starting_point, starting_time=0):\n",
         "    self.drift = drift_parameter\n",
         "    self.diffusion = diffusion_parameter\n",
         "    self.__starting_point = starting_point\n",
+        "    self.__starting_time = starting_time\n",
         "\n",
+        "  # Access to private attributes\n",
         "  def get_starting_point(self):\n",
         "    return self.__starting_point\n",
         "\n",
-        "  def simulate(self, solver):\n",
-        "    return 0;\n",
+        "  def get_starting_time(self):\n",
+        "    return self.__starting_time\n",
         "\n",
-        "  # ==== Private ==== #\n",
-        "  __starting_point = None\n",
+        "  # Public methods\n",
+        "  def simulate(self, solver):\n",
+        "    solver.generate_paths(self)\n",
+        "    return solver.get_paths()\n",
+        "\n",
+        "\n",
         "\n"
       ],
       "metadata": {
         "id": "tAeVkrCrReGF"
       },
-      "execution_count": 11,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "mean = np.zeros(2)\n",
-        "cov = np.eye(2)\n",
+        "# Langevin Dynamics\n",
+        "b = lambda t, x: np.array([-x])\n",
+        "sigma = lambda t, x: np.array([[np.sqrt(2)]])\n",
+        "diffusion = ItoDiffusion(b, sigma, 0)\n",
+        "solver = EulerMaruyama(start_time=0, end_time=1, num_intervals=100)\n",
+        "solver.update_noise()\n",
+        "solver.generate_paths(diffusion)"
+      ],
+      "metadata": {
+        "id": "-ckH-JIOzJky",
+        "outputId": "0f353753-195a-4149-de84-916ffef3f9aa",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ 0.        ],\n",
+              "       [ 0.04202974],\n",
+              "       [ 0.35137317],\n",
+              "       [ 0.40977624],\n",
+              "       [ 0.36475182],\n",
+              "       [ 0.465465  ],\n",
+              "       [ 0.54853727],\n",
+              "       [ 0.55194424],\n",
+              "       [ 0.49905202],\n",
+              "       [ 0.33764689],\n",
+              "       [ 0.38724653],\n",
+              "       [ 0.46101301],\n",
+              "       [ 0.34246523],\n",
+              "       [ 0.30266022],\n",
+              "       [ 0.39934426],\n",
+              "       [ 0.6258136 ],\n",
+              "       [ 0.50924535],\n",
+              "       [ 0.34478064],\n",
+              "       [ 0.18500441],\n",
+              "       [ 0.18888429],\n",
+              "       [ 0.03468443],\n",
+              "       [-0.09355847],\n",
+              "       [ 0.10337238],\n",
+              "       [ 0.09742191],\n",
+              "       [ 0.01742765],\n",
+              "       [ 0.00634469],\n",
+              "       [ 0.21878054],\n",
+              "       [ 0.1589912 ],\n",
+              "       [-0.0796205 ],\n",
+              "       [-0.12256608],\n",
+              "       [-0.08553357],\n",
+              "       [ 0.10914103],\n",
+              "       [ 0.2328743 ],\n",
+              "       [ 0.14337008],\n",
+              "       [ 0.00358793],\n",
+              "       [ 0.02848384],\n",
+              "       [ 0.01575714],\n",
+              "       [-0.10001335],\n",
+              "       [-0.07572745],\n",
+              "       [ 0.13625402],\n",
+              "       [ 0.14489657],\n",
+              "       [ 0.32531028],\n",
+              "       [ 0.07556097],\n",
+              "       [ 0.18651869],\n",
+              "       [ 0.30072812],\n",
+              "       [ 0.46741742],\n",
+              "       [ 0.5992315 ],\n",
+              "       [ 0.67329399],\n",
+              "       [ 0.76573213],\n",
+              "       [ 0.95440283],\n",
+              "       [ 0.87108229],\n",
+              "       [ 0.63941144],\n",
+              "       [ 0.69530123],\n",
+              "       [ 0.78131154],\n",
+              "       [ 0.56853379],\n",
+              "       [ 0.58484492],\n",
+              "       [ 0.76937293],\n",
+              "       [ 0.65826072],\n",
+              "       [ 0.72702094],\n",
+              "       [ 0.72642917],\n",
+              "       [ 0.77447757],\n",
+              "       [ 0.65638077],\n",
+              "       [ 0.44872629],\n",
+              "       [ 0.45689033],\n",
+              "       [ 0.51760026],\n",
+              "       [ 0.30260611],\n",
+              "       [ 0.58568751],\n",
+              "       [ 0.63893019],\n",
+              "       [ 0.82827864],\n",
+              "       [ 0.94388497],\n",
+              "       [ 0.72585947],\n",
+              "       [ 0.71083288],\n",
+              "       [ 0.79175258],\n",
+              "       [ 0.83156392],\n",
+              "       [ 0.61361829],\n",
+              "       [ 0.57257611],\n",
+              "       [ 0.42837189],\n",
+              "       [ 0.71154423],\n",
+              "       [ 0.76227724],\n",
+              "       [ 0.84388827],\n",
+              "       [ 0.71023435],\n",
+              "       [ 0.82973121],\n",
+              "       [ 0.79121709],\n",
+              "       [ 0.85334109],\n",
+              "       [ 0.96079078],\n",
+              "       [ 1.05557649],\n",
+              "       [ 1.01401942],\n",
+              "       [ 0.8649326 ],\n",
+              "       [ 0.93828707],\n",
+              "       [ 1.13310825],\n",
+              "       [ 1.18615568],\n",
+              "       [ 0.96234586],\n",
+              "       [ 0.98209299],\n",
+              "       [ 0.82351296],\n",
+              "       [ 0.71076463],\n",
+              "       [ 0.60787384],\n",
+              "       [ 0.68526446],\n",
+              "       [ 0.6722067 ],\n",
+              "       [ 0.64835093],\n",
+              "       [ 0.69054986],\n",
+              "       [ 0.6335704 ]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "mean = np.zeros(1)\n",
+        "cov = np.eye(1)\n",
         "x = np.random.multivariate_normal(mean, cov, size=(5,10))\n",
-        "x[:, 1, :] * 2"
+        "x"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sAMg33zkxWin",
-        "outputId": "be45e575-1d0f-48cd-851e-41d77b09f1c0"
+        "outputId": "985fe524-6e29-4871-d348-88a46bddadd0"
       },
-      "execution_count": 3,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[ 2.3033826 ,  1.69429731],\n",
-              "       [ 0.62208391, -0.58793983],\n",
-              "       [ 3.80730913, -2.133019  ],\n",
-              "       [ 0.49997592,  0.08766692],\n",
-              "       [-1.47053935, -0.02997737]])"
+              "array([[[-0.90615512],\n",
+              "        [ 0.82833175],\n",
+              "        [-2.10198091],\n",
+              "        [-0.19788701],\n",
+              "        [ 0.5218768 ],\n",
+              "        [ 2.01854836],\n",
+              "        [-1.37778855],\n",
+              "        [-1.7714833 ],\n",
+              "        [ 0.71280233],\n",
+              "        [ 1.32475372]],\n",
+              "\n",
+              "       [[-1.61014711],\n",
+              "        [ 0.14561295],\n",
+              "        [-0.85263392],\n",
+              "        [ 0.74356812],\n",
+              "        [ 1.17379519],\n",
+              "        [ 0.75405873],\n",
+              "        [-0.20963698],\n",
+              "        [-0.67394199],\n",
+              "        [ 0.24428393],\n",
+              "        [ 0.89038894]],\n",
+              "\n",
+              "       [[ 0.26663091],\n",
+              "        [ 0.07988207],\n",
+              "        [-0.9866139 ],\n",
+              "        [-0.35115833],\n",
+              "        [ 1.30547342],\n",
+              "        [ 0.69892603],\n",
+              "        [-1.04801189],\n",
+              "        [ 0.33834132],\n",
+              "        [ 1.17104524],\n",
+              "        [-2.63726753]],\n",
+              "\n",
+              "       [[-0.04708369],\n",
+              "        [ 0.6937553 ],\n",
+              "        [ 0.41389676],\n",
+              "        [-0.26198803],\n",
+              "        [ 1.64924059],\n",
+              "        [-0.90352418],\n",
+              "        [ 0.88068576],\n",
+              "        [-1.05725069],\n",
+              "        [-0.65973214],\n",
+              "        [ 0.91014099]],\n",
+              "\n",
+              "       [[ 0.6059788 ],\n",
+              "        [ 0.69120026],\n",
+              "        [-0.55857128],\n",
+              "        [-0.2079961 ],\n",
+              "        [ 1.46042145],\n",
+              "        [ 0.26697883],\n",
+              "        [-1.21896615],\n",
+              "        [-0.44689951],\n",
+              "        [ 0.75056795],\n",
+              "        [-1.73041893]]])"
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 24
         }
       ]
     }
