--- a/MasterThesis.ipynb
+++ b/MasterThesis.ipynb
@@ -4,7 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIzTrMn/6H4vPdn5aPIdoI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,14 +27,15 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "id": "8yyulAS8HKqm"
       },
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "import tensorflow as tf"
+        "import tensorflow as tf\n",
+        "import matplotlib.pyplot as plt"
       ]
     },
     {
@@ -151,7 +151,7 @@
       "metadata": {
         "id": "NgliujGbrQzD"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -186,7 +186,7 @@
       "metadata": {
         "id": "tAeVkrCrReGF"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -207,7 +207,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -318,88 +318,6 @@
           },
           "metadata": {},
           "execution_count": 34
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "mean = np.zeros(1)\n",
-        "cov = np.eye(1)\n",
-        "x = np.random.multivariate_normal(mean, cov, size=(5,10))\n",
-        "x"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "sAMg33zkxWin",
-        "outputId": "985fe524-6e29-4871-d348-88a46bddadd0"
-      },
-      "execution_count": 24,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "array([[[-0.90615512],\n",
-              "        [ 0.82833175],\n",
-              "        [-2.10198091],\n",
-              "        [-0.19788701],\n",
-              "        [ 0.5218768 ],\n",
-              "        [ 2.01854836],\n",
-              "        [-1.37778855],\n",
-              "        [-1.7714833 ],\n",
-              "        [ 0.71280233],\n",
-              "        [ 1.32475372]],\n",
-              "\n",
-              "       [[-1.61014711],\n",
-              "        [ 0.14561295],\n",
-              "        [-0.85263392],\n",
-              "        [ 0.74356812],\n",
-              "        [ 1.17379519],\n",
-              "        [ 0.75405873],\n",
-              "        [-0.20963698],\n",
-              "        [-0.67394199],\n",
-              "        [ 0.24428393],\n",
-              "        [ 0.89038894]],\n",
-              "\n",
-              "       [[ 0.26663091],\n",
-              "        [ 0.07988207],\n",
-              "        [-0.9866139 ],\n",
-              "        [-0.35115833],\n",
-              "        [ 1.30547342],\n",
-              "        [ 0.69892603],\n",
-              "        [-1.04801189],\n",
-              "        [ 0.33834132],\n",
-              "        [ 1.17104524],\n",
-              "        [-2.63726753]],\n",
-              "\n",
-              "       [[-0.04708369],\n",
-              "        [ 0.6937553 ],\n",
-              "        [ 0.41389676],\n",
-              "        [-0.26198803],\n",
-              "        [ 1.64924059],\n",
-              "        [-0.90352418],\n",
-              "        [ 0.88068576],\n",
-              "        [-1.05725069],\n",
-              "        [-0.65973214],\n",
-              "        [ 0.91014099]],\n",
-              "\n",
-              "       [[ 0.6059788 ],\n",
-              "        [ 0.69120026],\n",
-              "        [-0.55857128],\n",
-              "        [-0.2079961 ],\n",
-              "        [ 1.46042145],\n",
-              "        [ 0.26697883],\n",
-              "        [-1.21896615],\n",
-              "        [-0.44689951],\n",
-              "        [ 0.75056795],\n",
-              "        [-1.73041893]]])"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 24
         }
       ]
     }
